added stub for sync sound

--- a/index.html
+++ b/index.html
@@ -155,8 +155,18 @@
 
 			clockDelta = avgClockDelta;
 			console.log('avgClockDelta', avgClockDelta);
+
+			playSyncSound(clockDelta);
 		};
 
+
+		var playSyncSound = function (clockDelta) {
+			 var context = new webkitAudioContext();
+
+			 
+		};
+
+}
 
 /*
 
