--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		var localClockOffset = 0;Math.random()*10000;
 		var $clock = $('#clock');
 
+		var context = new webkitAudioContext();
 		var clockDelta = 0;
 		var samples = [];
 
@@ -156,14 +157,12 @@
 			clockDelta = avgClockDelta;
 			console.log('avgClockDelta', avgClockDelta);
 
-			playSyncSound(clockDelta);
 		};
 
 
-		var playSyncSound = function (clockDelta) {
-			 var context = new webkitAudioContext();
+		var playSyncSound = function (context) {
+			
 
-			 
 		};
 
 }
