--- a/index.html
+++ b/index.html
@@ -160,9 +160,11 @@
 		};
 
 
-		var playSyncSound = function (context) {
+		var playSyncSound = function (context, time) {
 			
+			// setup stuff
 
+			context.noteOn(time)
 		};
 
 }
