--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@
 
 			clockDelta = avgClockDelta;
 			console.log('avgClockDelta', avgClockDelta);
-
 		};
 
 
@@ -164,10 +163,9 @@
 			
 			// setup stuff
 
-			context.noteOn(time)
+			context.noteOn(time);
 		};
 
-}
 
 /*
 
